--- a/works.html
+++ b/works.html
@@ -23,14 +23,15 @@
 <div id="body">
   <div id="container" class="false_container container"></div>
 
-  <div id="container_olympic" class="container">
-    <div id="container">
+  <div id="container" class="container">
+    <div id="container_olympic" class="pointer">
       <div id="year" class="lavori_nomi year"> 2020 </div>
       <div id="olympic_nome" class="lavori_nomi nome"> Olympic explore </div>
       <img src="images/arrow.png" id="olympic_arrow" class="lavori_nomi arrow">
       <div id="categoria" class="lavori_nomi categoria"> Interior design </div>
     </div>
     <div id="description_olympic" class="display_none">
+      <!-- <div id="immagine" class="img"></div> -->
       <img src="images/olympic.png" class="img">
       <div class="work_description_total">
         <div id="work_description" class="work_description">
@@ -44,14 +45,14 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+          <a href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
         </div>
       </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container_deposito" class="container">
-    <div id="container">
+  <div id="container" class="container">
+    <div id="container_deposito" class="pointer">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="deposito_nome" class="lavori_nomi nome"> Deposito Cinerario </div>
       <img src="images/arrow.png" id="deposito_arrow" class="lavori_nomi arrow">
@@ -71,14 +72,14 @@
           - Space design
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+          <a href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container_zefir" class="container">
-    <div id="container">
+  <div id="container" class="container">
+    <div id="container_zefir" class="pointer">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="zefir_nome" class="lavori_nomi nome"> Zefir </div>
       <img src="images/arrow.png" id="zefir_arrow" class="lavori_nomi arrow">
@@ -98,14 +99,14 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a> </div>
+          <a href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container_izi" class="container">
-    <div id="container">
+  <div id="container" class="container">
+    <div id="container_izi" class="pointer">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="izi_nome" class="lavori_nomi nome"> Izi photo mosaic </div>
       <img src="images/arrow.png" id="izi_arrow" class="lavori_nomi arrow">
@@ -124,16 +125,16 @@
           - Programmazione web <br>
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://drawwithcode.github.io/2019-group-10-1/"> Provalo qui → </a> <br>
-          <a href="https://www.behance.net/elisamanzoni"> Progetto completo → </a>
+          <a href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Provalo qui → </a> <br>
+          <a href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a>
       </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
 
-  <div id="container_diciotti" class="container">
-    <div id="container">
+  <div id="container" class="container">
+    <div id="container_diciotti" class="pointer">
       <div id="year" class="lavori_nomi year"> 2019 </div>
       <div id="diciotti_nome" class="lavori_nomi nome"> Il caso Diciotti </div>
       <img src="images/arrow.png" id="diciotti_arrow" class="lavori_nomi arrow">
@@ -151,11 +152,91 @@
           - Data visualization
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti"> Progetto completo → </a> </div>
+          <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
   </div>
+
+  <div id="container" class="container">
+    <div id="container_arthur" class="pointer">
+      <div id="year" class="lavori_nomi year"> 2018 </div>
+      <div id="arthur_nome" class="lavori_nomi nome"> Arthur's Chronicles </div>
+      <img src="images/arrow.png" id="arthur_arrow" class="lavori_nomi arrow">
+      <div id="categoria" class="lavori_nomi categoria"> Game design </div>
+    </div>
+    <div id="description_arthur" class="display_none">
+      <img src="images/arthur.png" class="img">
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Videogioco platform che racconta la continuazione de “La spada nella roccia”
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Modellazione 3D <br>
+          - Progettazione grafica
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Provalo qui → </a> <br>
+          <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
+      </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_sparkle" class="pointer">
+      <div id="year" class="lavori_nomi year"> 2018 </div>
+      <div id="sparkle_nome" class="lavori_nomi nome"> Sparkle cruises </div>
+      <img src="images/arrow.png" id="sparkle_arrow" class="lavori_nomi arrow">
+      <div id="categoria" class="lavori_nomi categoria"> Brand identity </div>
+    </div>
+    <div id="description_sparkle" class="display_none">
+      <img src="images/sparkle.png" class="img">
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Fictional brand di crociere che si distingue dai suoi competitors e soddisfa i bisogni del proprio target.
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Progettazione grafica <br>
+          - Data visualization <br>
+          - Team working
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a> </div>
+      </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_whyracism" class="pointer">
+      <div id="year" class="lavori_nomi year"> 2018 </div>
+      <div id="whyracism_nome" class="lavori_nomi nome"> Whyracism </div>
+      <img src="images/arrow.png" id="whyracism_arrow" class="lavori_nomi arrow">
+      <div id="categoria" class="lavori_nomi categoria"> Editorial design </div>
+    </div>
+    <div id="description_whyracism" class="display_none">
+      <img src="images/whyracism.png" class="img">
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Elaborato editoriale che vuole far riflettere sulla discriminazione.
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Identità visiva <br>
+          - Interfaccia utente <br>
+          - Service design <br>
+          - Team working
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a> </div>
+      </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
 
 
 </div>
