--- a/about.html
+++ b/about.html
@@ -16,6 +16,26 @@
     <a href="works.html" id="works" class="header_name">WORKS</a>
     <div id="line_header" class="line line_header"></div>
   </div>
+
+  <div id="body" class="body">
+    <div id="titolo" class="titolo margin_top">
+      Mi presento <br>
+      sono Elisa Manzoni,
+    </div>
+    <img src="images/elisa.png" class="margin_top img">
+    <div id="descrizione" class="descrizione margin_top">
+      dipendente fin da piccola dai videogiochi e amante delle illustrazioni digitali, ho scelto quasi automaticamente di studiare grafica al liceo artistico e successivamente Design della Comunicazione al Politecnico di Milano.
+      L’amore per la grafica è nato praticamente subito, ma il percorso universitario mi ha permesso di approfondire l’importanza della comunicazione in ogni sua sfaccettatura e quanto questa cambi in base alla persona con la quale ci si rapporta. <br><br>
+      Cresciuta in un paesino nella bergamasca dove l’evento più mondano è la festa dell’oratorio dove tutti si conoscono e ognuno dà una mano, tendo a lanciarmi sempre in nuove esperienze e a rapportarmi facilmente con gli altri. La mia propensione per i lavori di gruppo deriva anche dalla pallavolo, sport che pratico da quando ne ho memoria, questo spiega il mio carattere determinato e deciso.
+    </div>
+    <div id="line_descrizione" class="line margin_top"> </div>
+    <div id="contact" class="contact">
+      Mail: <a class="underline" href="mailto:elisamanzoni98@gmail.com"> elisamanzoni98@gmail.com </a><br>
+      Telefono: <a  class="underline" href="tel:+393486581621"> 3486581621 </a><br>
+      Behance: <a  class="underline" href="https://www.behance.net/elisamanzoni">@elisamanzoni</a>
+    </div>
+  </div>
+
 </body>
 
 </html>
