--- a/works.html
+++ b/works.html
@@ -17,6 +17,7 @@
   <div id="header" class="header">
     <a href="about.html" id="about" class="header_name">ABOUT</a>
     <a href="works.html" id="works" class="header_name">WORKS</a>
+    <a href="index.html" id="home" class="header_name">EM</a>
     <div id="line_header" class="line line_header"></div>
   </div>
 
@@ -45,7 +46,7 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
         </div>
       </div>
     <div id="line_works" class="line line_works"></div>
@@ -72,7 +73,7 @@
           - Space design
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -99,8 +100,8 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/gallery/100108377/ZEFIR" class="green"> Progetto completo → </a> <br>
-          <a href="https://youtu.be/V7d_GVEcouw" class="green"> Video Zefir app → </a>
+          <a target="_blank" href="https://www.behance.net/gallery/100108377/ZEFIR" class="green"> Progetto completo → </a> <br>
+          <a target="_blank" href="https://youtu.be/V7d_GVEcouw" class="green"> Video Zefir app → </a>
         </div>
       </div>
     </div>
@@ -127,8 +128,8 @@
           - Programmazione web <br>
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Provalo qui → </a> <br>
-          <a href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a>
+          <a target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Provalo qui → </a> <br>
+          <a target="_blank" href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a>
       </div>
       </div>
     </div>
@@ -154,7 +155,7 @@
           - Data visualization
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -179,8 +180,8 @@
           - Progettazione grafica
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Provalo qui → </a> <br>
-          <a href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Provalo qui → </a> <br>
+          <a target="_blank" href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -206,7 +207,58 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a>
+        </div>
+      </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_assunta" class="pointer">
+      <div id="year" class="lavori_nomi year"> 2018 </div>
+      <div id="assunta_nome" class="lavori_nomi nome"> Oratorio in festa </div>
+      <img src="images/arrow.png" id="assunta_arrow" class="lavori_nomi arrow">
+      <div id="categoria" class="lavori_nomi categoria"> Identità visiva </div>
+    </div>
+    <div id="description_assunta" class="display_none">
+      <img src="images/assunta.png" class="img">
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Identità visiva per la festa estiva dell’oratorio di Sotto il Monte.
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Progettazione grafica <br>
+          - Identità visiva <br>
+          - Campagna social
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a target="_blank" href="https://www.instagram.com/sottoilmonteinfesta/?hl=it" class="green"> Pagina Instagram → </a>
+        </div>
+      </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_mengoni" class="pointer">
+      <div id="year" class="lavori_nomi year"> 2018 </div>
+      <div id="mengoni_nome" class="lavori_nomi nome"> Atlantico Mengoni </div>
+      <img src="images/arrow.png" id="mengoni_arrow" class="lavori_nomi arrow">
+      <div id="categoria" class="lavori_nomi categoria"> Illustrazione vettoriale </div>
+    </div>
+    <div id="description_mengoni" class="display_none">
+      <img src="images/mengoni.png" class="img">
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Elaborato grafico per la promozione dell’album “Atlantico” di Marco Mengoni.
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Progettazione grafica <br>
+          - Disegno manuale
+        </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -233,7 +285,33 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a> </div>
+      </div>
+    </div>
+    <div id="line_works" class="line line_works"></div>
+  </div>
+
+  <div id="container" class="container">
+    <div id="container_haaring" class="pointer">
+      <div id="year" class="lavori_nomi year"> 2017 </div>
+      <div id="haaring_nome" class="lavori_nomi nome"> Keith Haring video </div>
+      <img src="images/arrow.png" id="haaring_arrow" class="lavori_nomi arrow">
+      <div id="categoria" class="lavori_nomi categoria"> Video animato </div>
+    </div>
+    <div id="description_haaring" class="display_none">
+      <img src="images/haaring.png" class="img">
+      <div class="work_description_total">
+        <div id="work_description" class="work_description">
+          Animazione che dà vita ai personaggi dell'opera di Keth Haring.
+        </div>
+        <div id="work_description2" class="work_description">
+          Competenze: <br>
+          - Illustrazione <br>
+          - Animazione <br>
+          - Storytelling
+        </div>
+        <div id="work_description3" class="work_description link">
+          <a href="https://www.youtube.com/watch?v=IEjQcTmEZsI&feature=youtu.be" class="green" target="_blank"> Video → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
