--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
   <div id="header" class="header">
     <a href="about.html" id="about" class="header_name">ABOUT</a>
     <a href="works.html" id="works" class="header_name">WORKS</a>
+    <a href="index.html" id="home" class="header_name">EM</a>
     <div id="line_header" class="line line_header"></div>
   </div>
 
