--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <script src="p5.min.js"></script>
     <script src="p5.sound.min.js"></script>
-    <script src="sketch.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -16,6 +15,7 @@
 <div id="header" class="header">
   <a href="about.html" id="about" class="header_name">ABOUT</a>
   <a href="works.html" id="works" class="header_name">WORKS</a>
+  <a href="index.html" id="home" class="header_name">EM</a>
   <div id="line_header" class="line line_header"></div>
 </div>
 
