--- a/works.html
+++ b/works.html
@@ -46,7 +46,7 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/100242791/Olympic-Explore" class="green"> Progetto completo → </a> </div>
         </div>
       </div>
     <div id="line_works" class="line line_works"></div>
@@ -73,7 +73,7 @@
           - Space design
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/100238879/Deposito-Cinerario-Italiano" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -129,7 +129,7 @@
         </div>
         <div id="work_description3" class="work_description link">
           <a target="_blank" href="https://drawwithcode.github.io/2019-group-10-1/" class="green"> Provalo qui → </a> <br>
-          <a target="_blank" href="https://www.behance.net/elisamanzoni" class="green"> Progetto completo → </a>
+          <a target="_blank" href="https://www.behance.net/gallery/100250837/Izi-photo-mosaic" class="green"> Progetto completo → </a>
       </div>
       </div>
     </div>
@@ -180,8 +180,7 @@
           - Progettazione grafica
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Provalo qui → </a> <br>
-          <a target="_blank" href="https://www.behance.net/gallery/91033257/Il-caso-Diciotti" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://elisamanzoni.github.io/arthurschronicles/" class="green"> Provalo qui → </a></div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
@@ -285,7 +284,7 @@
           - Team working
         </div>
         <div id="work_description3" class="work_description link">
-          <a target="_blank" href="https://www.behance.net/gallery/91335651/Sparkle-Cruises" class="green"> Progetto completo → </a> </div>
+          <a target="_blank" href="https://www.behance.net/gallery/100247853/Whyracism" class="green"> Progetto completo → </a> </div>
       </div>
     </div>
     <div id="line_works" class="line line_works"></div>
