--- a/works.html
+++ b/works.html
@@ -17,6 +17,7 @@
   <div id="header" class="header">
     <a href="about.html" id="about" class="header_name">ABOUT</a>
     <a href="works.html" id="works" class="header_name">WORKS</a>
+    <a id="contact" class="header_name">CONTACT</a>
     <a href="index.html" id="home" class="header_name">EM</a>
     <div id="line_header" class="line line_header"></div>
   </div>
