--- a/about.html
+++ b/about.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <script src="p5.min.js"></script>
+    <script src="p5.sound.min.js"></script>
+    <script src="sketch.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -14,8 +17,16 @@
   <div id="header" class="header">
     <a href="about.html" id="about" class="header_name">ABOUT</a>
     <a href="works.html" id="works" class="header_name">WORKS</a>
+    <a id="contact" class="header_name">CONTACT</a>
     <a href="index.html" id="home" class="header_name">EM</a>
     <div id="line_header" class="line line_header"></div>
+  </div>
+
+  <div id="contact_container" class=" display_none">
+    <div class="exit" id="exit"></div>
+    <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
+    <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
+    <a  class="contact_popup" href="https://www.behance.net/elisamanzoni">@elisamanzoni</a>
   </div>
 
   <div id="body" class="body">
@@ -30,7 +41,7 @@
       Cresciuta in un paesino nella bergamasca dove l’evento più mondano è la festa dell’oratorio dove tutti si conoscono e ognuno dà una mano, tendo a lanciarmi sempre in nuove esperienze e a rapportarmi facilmente con gli altri. La mia propensione per i lavori di gruppo deriva anche dalla pallavolo, sport che pratico da quando ne ho memoria, questo spiega il mio carattere determinato e deciso.
     </div>
     <div id="line_descrizione" class="line margin_top"> </div>
-    <div id="contact" class="contact">
+    <div id="contact_link" class="contact">
       Mail: <a class="underline" href="mailto:elisamanzoni98@gmail.com"> elisamanzoni98@gmail.com </a><br>
       Telefono: <a  class="underline" href="tel:+393486581621"> 3486581621 </a><br>
       Behance: <a  class="underline" href="https://www.behance.net/elisamanzoni">@elisamanzoni</a>
