--- a/works.html
+++ b/works.html
@@ -22,6 +22,13 @@
     <div id="line_header" class="line line_header"></div>
   </div>
 
+  <div id="contact_container" class="contact_container_sparito display_none">
+    <div class="exit" id="exit"></div>
+    <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
+    <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
+    <a  class="contact_popup" href="https://www.behance.net/elisamanzoni">@elisamanzoni</a>
+  </div>
+
 <div id="body">
   <div id="container" class="false_container container"></div>
 
