--- a/index.html
+++ b/index.html
@@ -11,13 +11,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="home.css" rel="stylesheet">
+
+    <title>Manzoni Elisa</title>
+    <link rel="shortcut icon" href="images/favicon.png">
+
+    <meta name="description" content="Elisa Manzoni website">
+    <meta name="keywords" content="Elisa Manzoni, portfolio">
+
   </head>
   <body>
 <div id="header" class="header">
   <a href="about.html" id="about" class="header_name">ABOUT</a>
   <a href="works.html" id="works" class="header_name">WORKS</a>
   <a id="contact" class="header_name">CONTACT</a>
-  <a href="index.html" id="home" class="header_name">EM</a>
+  <a href="index.html" id="home" class="header_name">ME</a>
   <div id="line_header" class="line line_header"></div>
 </div>
 
@@ -30,8 +37,13 @@
 
 <div id="body" class="body">
     <div id="home_description" class="home_description">
-      Mi chiamo Elisa e sono un’aspirante <a class="sottolineato">designer della comunicazione</a> di Bergamo. <br>
+      Sono <a class="sottolineato"></a> e sono un’aspirante <a class="sottolineato_verde">designer della comunicazione</a> di Bergamo. <br>
       Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il coding.
+    </div>
+
+    <div id="link_scopri" class="home_description link_scopri">
+      <a href = "works.html"> <div id="link_progetti" class="link_progetti">Scopri i miei progetti<img src="images/arrow_right.png" class="arrow_right arrow_right1"></div></a>
+      <a href = "mailto:elisamanzoni98@gmail.com"><div id="link_contattami" class="link_progetti">Contattami<img src="images/arrow_right.png" class="arrow_right arrow_right2"></div></a>
     </div>
 </div>
 
