--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <a href="about.html" id="about" class="header_name">ABOUT</a>
     <a href="works.html" id="works" class="header_name">WORKS</a>
     <a id="contact" class="header_name">CONTACT</a>
-    <a href="index.html" id="home" class="header_name">EM</a>
+    <a href="index.html" id="home" class="header_name">ME</a>
     <div id="line_header" class="line line_header"></div>
   </div>
 
