--- a/works.html
+++ b/works.html
@@ -11,6 +11,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="works.css" rel="stylesheet">
+
+    <title>Manzoni Elisa</title>
+    <link rel="shortcut icon" href="images/favicon.png">
+
+    <meta name="description" content="Elisa Manzoni website">
+    <meta name="keywords" content="Elisa Manzoni, portfolio">
 </head>
 
 <body>
