--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 
     <title>Manzoni Elisa</title>
     <link rel="shortcut icon" href="images/favicon.png">
-
-    <meta name="description" content="Elisa Manzoni website">
     <meta name="keywords" content="Elisa Manzoni, portfolio">
 
   </head>
@@ -32,13 +30,13 @@
   <div class="exit" id="exit"></div>
   <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
   <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
-  <a  class="contact_popup" href="https://www.behance.net/elisamanzoni">@elisamanzoni</a>
+  <a  class="contact_popup" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a>
 </div>
 
 <div id="body" class="body">
     <div id="home_description" class="home_description">
-      Sono <a class="sottolineato"></a> e sono un’aspirante <a class="sottolineato_verde">designer della comunicazione</a> di Bergamo. <br>
-      Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il coding.
+      Sono <a class="elisa_manzoni"></a> e sono un’aspirante <a class="sottolineato_verde">designer della comunicazione</a> di Bergamo. <br>
+      Amante della progettazione grafica in tutte le sue sfaccettature, ho una passione particolare per il design digitale e il <a href="https://elisamanzoni.github.io/monstereye/" target="_blank" class="coding"></a>.
     </div>
 
     <div id="link_scopri" class="home_description link_scopri">
