--- a/works.html
+++ b/works.html
@@ -14,8 +14,6 @@
 
     <title>Manzoni Elisa</title>
     <link rel="shortcut icon" href="images/favicon.png">
-
-    <meta name="description" content="Elisa Manzoni website">
     <meta name="keywords" content="Elisa Manzoni, portfolio">
 </head>
 
@@ -32,7 +30,7 @@
     <div class="exit" id="exit"></div>
     <a class="contact_popup" href="mailto:elisamanzoni98@gmail.com">elisamanzoni98@gmail.com</a><br>
     <a  class="contact_popup" href="tel:+393486581621">3486581621</a><br>
-    <a  class="contact_popup" href="https://www.behance.net/elisamanzoni">@elisamanzoni</a>
+    <a  class="contact_popup" href="https://www.behance.net/elisamanzoni">behance/elisamanzoni</a>
   </div>
 
 <div id="body">
